[package]
name = "cairo_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.23.1"
glium = "0.32.1"
nalgebra = "0.32.2"
parry2d = "0.13.3"
# plotters = "0.3.4"
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"


# [[bin]]
# name = "main"
# src = "src/main.rs"

# [[bin]]
# name = "3dgraph"
# src = "src/3dgraph.rs"

# [[bin]]
# name = "sync_data"
# src = "src/sync_data.rs"

